--- a/views/store.pug
+++ b/views/store.pug
@@ -1,5 +1,8 @@
 extends layout
 
+include mixins/_reviewForm
+include mixins/_review
+
 block content
   .single
     .single__hero
@@ -7,12 +10,20 @@ block content
       h2.title.title--single
         a(href=`/stores/${store.slug}`)= store.name
   .single__details.inner
-    img.single__map(src=h.staticMap(store.location.coordinates))
-  p.single__location= store.location.address
-  p= store.description
-  if store.tags
-    ul.tags
-      each tag in store.tags
-        li.tag
-          a.tag__link(href=`/tags/${tag}`)
-            span.tag__text= tag
+    // img.single__map(src=h.staticMap(store.location.coordinates))
+    p.single__location= store.location.address
+    p= store.description
+    if store.tags
+      ul.tags
+        each tag in store.tags
+          li.tag
+            a.tag__link(href=`/tags/${tag}`)
+              span.tag__text= tag
+    if user
+      +reviewForm(store)
+    if store.reviews
+      .reviews
+        each review in store.reviews
+          .review
+            +review(review)
+
