--- a/views/stores.pug
+++ b/views/stores.pug
@@ -1,11 +1,12 @@
 extends layout
 
 include mixins/_storeCard
+include mixins/_pagination
 
 block content
   .inner
     h2= title
-    // pre= h.dump(stores) // dump is set in './helpers.js'
     .stores
       each store in stores
         +storeCard(store)
+    +pagination(page, pages, count)
